KC-1265: Add person to folder implementation.
