# config/packages/nelmio_api_doc.yaml
@@ -487,3 +487,40 @@ nelmio_api_doc:
               ref: '#/components/responses/InvalidRequest'
             '500':
               ref: '#/components/responses/ServerError'
+      /api/v1/folders/{id}/add-person:
+        post:
+          summary: Add a person to folder with id {id}.
+          tags:
+            - Folders
+          parameters:
+            - ref: '#/components/parameters/id'
+          requestBody:
+            required: true
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    personTypeId:
+                      type: integer
+                      example: 4
+                    agencyId:
+                      type: integer
+                      example: 4
+                    firstName:
+                      type: string
+                      example: Snow
+                    lastName:
+                      type: string
+                      example: John
+                  required:
+                    - personTypeId
+                    - agencyId
+          responses:
+            '204':
+              description: No Content
+            '400':
+              description: Invalid Request
+              ref: '#/components/responses/InvalidRequest'
+            '500':
+              ref: '#/components/responses/ServerError'
